# protocol

./: Cargo.toml  README.md  build.rs  envrc.example  rustfmt.toml
migrations/: 20231215181317_users.up.sql
src/: broker.rs  client.rs  lib.rs  main.rs  message.rs  server.rs  settings.rs
src/app/: error.rs  mod.rs
src/app/auth/: delete.rs  login.rs  middleware.rs  mod.rs  register.rs
src/app/proto/: mod.rs
src/handler/: message.rs  mod.rs
src/mailbox/: drain.rs  drained.rs  duplex.rs  mod.rs
src/message/: mod.rs
src/message/model/: client.rs  mod.rs
src/server/: client.rs  mod.rs  reader.rs  writer.rs
