[package]
name = "etron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
dashmap = { version = "5.5.1", features = ["inline"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
lazy_static = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
