[package]
name = "etron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["ws", "tracing", "macros"] }
chrono = { version = "0.4.30", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["inline"] }
derive_builder = "0.12.0"
futures = "0.3.28"
pico-args = { version = "0.5.0", features = ["eq-separator", "short-space-opt"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typed-builder = "0.16.0"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
